# azunetes

./: .ansible-lint  .gitignore  AGENTS.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ansible-lint-uv.yml  ansible-lint.yml  assign-pr-author.yml  check-ansible-uv.yml  shellcheck.yml
ansible/: .ansible-lint  pyproject.toml
ansible/inventories/idempotency_192_168_12_16/: hosts.yml
ansible/inventories/local/: hosts.yml
ansible/inventories/local/host_vars/: 192.168.12.16.yml  localhost.yml.example
ansible/playbooks/: site.yml
ansible/roles/calicoctl/defaults/: main.yml
ansible/roles/calicoctl/meta/: main.yml
ansible/roles/calicoctl/tasks/: main.yml
ansible/roles/common/: README.md
ansible/roles/common/defaults/: main.yml
ansible/roles/common/tasks/: main.yml
ansible/roles/containerd/defaults/: main.yml
ansible/roles/containerd/meta/: main.yml
ansible/roles/containerd/tasks/: main.yml
ansible/roles/kubeadm/defaults/: main.yml
ansible/roles/kubeadm/meta/: main.yml
ansible/roles/kubeadm/tasks/: main.yml
docs/: firewall.md  kubernetes-components.md
docs/agents/: AI-AGENT-GUIDELINE.md  README.md
docs/decisions/: 000-templates.md  001-do-not-use-terraform.md  002-ansible-uv.md  003-use-debian-13-trixie.md  004-ansible-directory-layout.md  005-keep-production-inventory-private.md  006-shellcheck-ci.md  007-apply-cluster-foundation-resources-via-github-actions.md
docs/runbooks/: common-host-settings.md
manifests/calico/: felixconfiguration.yaml
scripts/: bootstrap-ansible-user.md  bootstrap-ansible-user.sh
(+13 files in other folders)
